Add SQL functions, create methods to handle reminder and attendee tables in EventDataAccessService, modify EventService post method